Removed scrolling issue on mobile

--- a/app/assets/stylesheets/shoebuckle/_sidebar.scss
+++ b/app/assets/stylesheets/shoebuckle/_sidebar.scss
@@ -1,6 +1,7 @@
 .shoebuckle.sidebar-pushable {
     display: flex;
     align-items: stretch;
+    overflow: hidden;
     
     position: relative;
 
